# telegram-edge-relay

./: .env.example  AGENTS.md  AI_CONTEXT.md  ARCHITECTURE_DECISIONS.md  CODING_RULES.md  LICENSE  README.md  pyproject.toml
app/: __init__.py  config.py  logging.py  main.py
app/api/: internal.py  public.py  system.py
app/core/: request_id.py
app/models/: internal.py  public.py  system.py
app/security/: signing.py
app/services/: backend_forwarder.py  internal_telegram.py  telegram_client.py
examples/: README.md  backend_client.py  backend_receiver.py
tests/: test_internal_canonical_routes.py  test_internal_parity.py  test_internal_raw.py  test_internal_response_modes.py  test_internal_send_message.py  test_internal_telegram_methods.py  test_logging.py  test_public_webhook.py  test_signing.py  test_system.py
